clang/test/BSC/Negative/NullabilityCheck/type_cast.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

_Safe int *_Borrow return_and_take_nonnull(int *_Borrow a) {
    _Unsafe {
        int *_Borrow _Nullable p = nullptr;
        return (int *_Borrow)p;  // expected-error {{cannot cast nullable pointer to nonnull type}}
    }
}

_Safe void test1(void) {
    _Unsafe {
        int a = 10;
        int *_Borrow _Nullable p = &_Mut a;
        return_and_take_nonnull((int *_Borrow)p);
        int *_Borrow k1 = (int *_Borrow)p;
        p = nullptr;
        return_and_take_nonnull((int *_Borrow)p); // expected-error {{cannot cast nullable pointer to nonnull type}}
        int *_Borrow k2 = (int *_Borrow)p;  // expected-error {{cannot cast nullable pointer to nonnull type}}
    }
}

void *get_nullable();
void free_nonnull(int *_Nonnull p);
_Safe void test2(void) {
    _Unsafe {
        int *_Nonnull p1 = (int *_Nonnull)get_nullable(); // expected-error {{cannot cast nullable pointer to nonnull type}}

        int *p = get_nullable();  //implicit cast void* to int*
        *p = 10;   // expected-error {{nullable pointer cannot be dereferenced}}
        if (p != nullptr) {
            *p = 20;
        }
        free_nonnull((int *_Nonnull)p); // expected-error {{cannot cast nullable pointer to nonnull type}}
    }
}